test/tests/stages/14_pointers/invalid_declarations/extra_credit/deref_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(lbl)
  :
  *
  identifier(lbl)
  ;
  return
  const int(0)
  ;
  }
